# kweather

./: .craft.ini  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.license  .kde-ci.yml  CMakeLists.txt  README.md  REUSE.toml  org.kde.kweather.appdata.xml  org.kde.kweather.desktop  org.kde.kweather.json  org.kde.kweather.json.license  org.kde.kweather.service.in  snapcraft.yaml
.reuse/: dep5
android/: AndroidManifest.xml  build.gradle  ic_launcher-playstore.png.license
android/res/drawable/: splash.xml
android/res/drawable-v24/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/res/mipmap-anydpi-v26/: ic_launcher.xml
android/res/mipmap-mdpi/: ic_launcher.png.license
po/ar/: kweather.po
po/ast/: kweather.po
po/az/: kweather.po
po/bg/: kweather.po
po/ca/: kweather.po
po/ca@valencia/: kweather.po
po/cs/: kweather.po
po/de/: kweather.po
po/el/: kweather.po
po/en_GB/: kweather.po
po/eo/: kweather.po
po/es/: kweather.po
po/et/: kweather.po
po/eu/: kweather.po
po/fi/: kweather.po
po/fr/: kweather.po
po/ga/: kweather.po
po/gl/: kweather.po
po/he/: kweather.po
po/hi/: kweather.po
po/hu/: kweather.po
po/ia/: kweather.po
po/is/: kweather.po
po/it/: kweather.po
po/ja/: kweather.po
po/ka/: kweather.po
po/ko/: kweather.po
po/lt/: kweather.po
po/lv/: kweather.po
po/nb/: kweather.po
po/nl/: kweather.po
po/nn/: kweather.po
po/pa/: kweather.po
po/pl/: kweather.po
po/pt/: kweather.po
po/pt_BR/: kweather.po
po/ru/: kweather.po
po/sa/: kweather.po
po/sk/: kweather.po
po/sl/: kweather.po
po/sv/: kweather.po
po/tr/: kweather.po
po/ug/: kweather.po
po/uk/: kweather.po
po/x-test/: kweather.po
po/zh_CN/: kweather.po
po/zh_TW/: kweather.po
src/: CMakeLists.txt  Messages.sh  about.cpp  about.h  abstractapi.cpp  abstractapi.h  abstractdailyweatherforecast.cpp  abstractdailyweatherforecast.h  abstracthourlyweatherforecast.cpp  abstracthourlyweatherforecast.h  abstractsunrise.cpp  abstractsunrise.h  abstractweatherapi.cpp  abstractweatherapi.h  abstractweatherforecast.cpp  abstractweatherforecast.h  downloader.cpp  downloader.h  formatter.cpp  formatter.h  geoiplookup.cpp  geoiplookup.h  geolocation.cpp  geolocation.h  geotimezone.cpp  geotimezone.h  global.h  iconmap.h  kweathersettings.kcfg  kweathersettings.kcfgc  kweathersettings.kcfgc.license  locationquerymodel.cpp  locationquerymodel.h  main.cpp  nmisunriseapi.cpp  nmisunriseapi.h  nmiweatherapi.cpp  nmiweatherapi.h  nmiweatherapi2.cpp  nmiweatherapi2.h  (+31 more)
src/krunner/: CMakeLists.txt  kweatherrunner.cpp  kweatherrunner.h  kweatherrunner.json  kweatherrunner.json.license
src/plasmoid/: CMakeLists.txt  WeatherContainer.qml  hourlymodel.cpp  hourlymodel.h  kweather_1x4.cpp  kweather_1x4.h  kweatherplasmoid.cpp  kweatherplasmoid.h  locationmodel.cpp  locationmodel.h  metadata.json
src/plasmoid/hourly/: CMakeLists.txt  hourlymodel.cpp  hourlymodel.h  kweatherplasmoid.cpp  kweatherplasmoid.h  locationquerymodel.cpp  locationquerymodel.h  metadata.json
src/plasmoid/hourly/qml/: WeatherContainer.qml  WeatherWidget.qml  config.qml  main.qml
src/plasmoid/hourly/qml/settings/: ConfigLocation.qml
src/plasmoid/package/: metadata.desktop  metadata.json
src/plasmoid/package/contents/ui/: LocationSelector.qml  WeatherContainer.qml  main.qml
src/qml/: AboutPage.qml  AddCityPage.qml  AddLocationPage.qml  CMakeLists.txt  CitiesPage.qml  CityForecast.qml  CityForecast2.qml  DefaultPage.qml  DynamicForecastPage.qml  DynamicLocationForecast.qml  FlatForecastPage.qml  FlatLocationForecast.qml  ForecastContainerPage.qml  ForecastPage.qml  InfoCard.qml  KWeatherStyle.qml  LocationForecast.qml  LocationForecast2.qml  LocationsPage.qml  Main.qml  PlaceholderMessage.qml  PopupDialog.qml  ProgressCircle.qml  Settings.qml  SettingsDialog.qml  SettingsPage.qml  SetupWizard.qml  Sidebar.qml  SunriseCard.qml  TemperatureChartCard.qml  WeatherDayDelegate.qml  WeatherHourDelegate.qml  WeatherStrip.qml  main.qml  qmldir  setupWizard.qml
src/qml/backgrounds/: CMakeLists.txt  ClearDay.qml  ClearNight.qml  CloudyDay.qml  CloudyNight.qml  DynamicBackground.qml  Misty.qml  PartlyCloudyDay.qml  PartlyCloudyNight.qml  RainyDay.qml  RainyNight.qml  SnowyDay.qml  SnowyNight.qml
src/qml/backgrounds/components/: CMakeLists.txt  Cloud.qml  Cloudy.qml  Rain.qml  Snow.qml  Stars.qml  Sun.qml
src/qml/components/: CMakeLists.txt  ListDelegate.qml  PageContainer.qml  PageHeader.qml  PageStack.qml
src/qml/forecast/dynamic/: DynamicForecastBackground.qml  DynamicForecastContent.qml  DynamicForecastHeader.qml  DynamicForecastPage.qml
src/qml/forecast/flat/: FlatForecastPage.qml  FlatLocationForecast.qml
src/qml/locationslist/: AddLocationDialog.qml  AddLocationListView.qml  AddLocationPage.qml  CMakeLists.txt  LocationsListDialog.qml  LocationsListPage.qml  LocationsListView.qml
src/qml/settings/: CMakeLists.txt  PrecipitationUnitComboBox.qml  PressureUnitComboBox.qml  SettingsComponent.qml  SettingsDialog.qml  SettingsPage.qml  SettingsWindow.qml  SpeedUnitComboBox.qml  TemperatureUnitComboBox.qml
src/resources/: CMakeLists.txt  KWeather_FLAT.png.license  NotoSans-Light.ttf.license  autumn.jpg.license
